# recursive-llm-proxy

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  MANIFEST.in  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  evaluation.yml  format-branch.yml  launcher-bundles.yml  publish-container.yml  rc1-cross-platform-install.yml  rc1-promotion.yml  rc1-system-smoke.yml  release-integrity.yml  rust-knowledge.yml
benchmarks/: knowledge_profile.py
docs/: admin-ui.md  api.md  architecture.md  bundled-installation.md  catalog-mutations.md  catalog-transfer.md  cowork.md  knowledge-jobs.md  knowledge-runtime.md  knowledge.md  one-click-local-ai-roadmap.md  openai-proxy.md  parallel-delivery.md  quickstart.md  rc1-release-checklist.md  rolling-ingestion.md  slot-routing.md  usable-state-workstream.md
docs/architecture/: rust-knowledge-core.md
evaluation/: gates.py  harness.py  policy.json
evaluation/fixtures/: smoke-results.json  smoke-v1.json
examples/: basic_usage.py  long_document.py  two_models.py
examples/proxy/: README.md  auto_route.json  explicit_route.json  openai_sdk.py  slot_setup.json
launchers/: launcher.pyw
launchers/linux/: Start Local RLM Cowork.desktop
launchers/macos/Local RLM Cowork.app/Contents/: Info.plist
launchers/macos/Local RLM Cowork.app/Contents/MacOS/: local-rlm-cowork
launchers/windows/: Start Local RLM Cowork.vbs
rust/knowledge-core/: Cargo.toml
rust/knowledge-core/src/: ann.rs  cache.rs  chunking.rs  error.rs  lib.rs  model.rs  pipeline.rs  scope.rs  sqlite_hybrid_store.rs  sqlite_store.rs  store.rs  sync.rs
rust/knowledge-core/src/adapters/: fastembed.rs  mod.rs  xberg.rs
rust/knowledge-core/tests/: pipeline_e2e.rs
rust/knowledge-service/: Cargo.toml
rust/knowledge-service/src/: main.rs
scripts/: optimize_bundle.py  select_github_release_asset.py
src/rlm/: __init__.py
src/rlm_proxy/: __init__.py  adapter.py  admin_security.py  app.py  audit_log.py  catalog_api.py  catalog_editor.py  catalog_store.py  catalog_transfer.py  catalog_transfer_service.py  cli.py  config.py  control_plane.py  conversation_compaction.py  conversation_memory.py  cowork.py  entrypoints.py  ingestion.py  knowledge.py  knowledge_browser.py  knowledge_query_cache.py  knowledge_sync.py  managed_knowledge.py  managed_llama.py  managed_proxy.py  managed_webui.py  management_ui.py  memory_gateway.py  metrics.py  models.py  recovery_supervisor.py  release_manifest.py  release_manifest_cli.py  routing.py  runtime_coordinator.py  runtime_diagnostics.py  scoped_knowledge_gateway.py  stack_health.py  stack_ui.py  ui.py  (+1 more)
tests/: test_admin_security.py  test_audit_log.py  test_catalog_api.py  test_catalog_editor.py  test_catalog_store.py  test_catalog_transfer.py  test_catalog_transfer_service.py  test_control_plane.py  test_conversation_compaction.py  test_conversation_memory.py  test_evaluation_gates.py  test_evaluation_harness.py  test_knowledge_browser.py  test_knowledge_profile.py  test_knowledge_query_cache.py  test_knowledge_sync.py  test_managed_knowledge.py  test_managed_llama.py  test_managed_proxy.py  test_managed_webui.py  test_management_ui.py  test_memory_gateway.py  test_optimize_bundle.py  test_proxy_adapter.py  test_proxy_app.py  test_proxy_ingestion.py  test_proxy_knowledge.py  test_proxy_metrics.py  test_proxy_routing.py  test_rc1_persistence_restore.py  test_rc1_system_smoke.py  test_recovery_supervisor.py  test_release_asset_selector.py  test_release_manifest.py  test_runtime_coordinator.py  test_runtime_diagnostics.py  test_scoped_knowledge_gateway.py  test_stack_health.py  test_stack_ui.py  test_ui_clients.py
