[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recursive-llm"
version = "0.2.0"
description = "OpenAI-compatible Recursive Language Model proxy with context-slot routing and local browser interfaces"
authors = [{name = "Grigori Gvadzabia"}]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["llm", "ai", "nlp", "recursive", "language-models", "openai-proxy", "llama-cpp", "gradio", "open-webui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm>=1.0.0",
    "RestrictedPython>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
proxy = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pydantic-settings>=2.6,<3",
    "uvicorn[standard]>=0.32,<1",
]
ui = [
    "gradio>=6,<7; python_version >= '3.10'",
    "httpx>=0.27,<1",
]
cowork = [
    "open-webui>=0.6,<1; python_version >= '3.11'",
]
dev = [
    "build>=1.2.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "coverage[toml]>=7.10.0",
    "black==25.11.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/rpatel622/recursive-llm-proxy"
Documentation = "https://github.com/rpatel622/recursive-llm-proxy/tree/main/docs"
Repository = "https://github.com/rpatel622/recursive-llm-proxy"
Issues = "https://github.com/rpatel622/recursive-llm-proxy/issues"
Upstream = "https://github.com/grishahq/recursive-llm"
Changelog = "https://github.com/rpatel622/recursive-llm-proxy/blob/main/CHANGELOG.md"

[project.scripts]
rlm-proxy = "rlm_proxy.cli:main"
rlm-proxy-ui = "rlm_proxy.ui:main"
rlm-cowork = "rlm_proxy.cowork:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=rlm --cov-branch --cov-report=term-missing --cov-fail-under=90"
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
parallel = true
patch = ["subprocess"]
sigterm = true

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "litellm"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["gradio", "gradio.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["RestrictedPython", "RestrictedPython.*", "open_webui", "open_webui.*"]
ignore_missing_imports = true
