[package]
name = "rlm-knowledge-service"
version = "0.1.0"
description = "Local HTTP service for persistent document ingestion and hybrid retrieval"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8"
base64 = "0.22"
fastembed = { version = "5.17", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rlm-knowledge-core = { path = "../knowledge-core", features = ["fastembed", "sqlite", "xberg"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
